make sure .marker-container isn't visible when collapsed

--- a/web/css/bhims-entry.css
+++ b/web/css/bhims-entry.css
@@ -593,6 +593,9 @@ button.indicator-dot:focus {
 	line-height: 45px;
 	justify-content: flex-start;
 }
+.marker-container.collapse:not(.show) {
+	display: none;
+}
 .marker-label {
     transition: all 0.2s ease-out;
     font-size: 13px;
